--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,20 +31,28 @@ dependencies:
   flutter:
     sdk: flutter
 
-  path: ^1.8.0
   
 
-  google_sign_in: ^6.2.1
-  firebase_core: ^3.1.0
-  cloud_firestore: ^5.0.1
-  firebase_storage: ^12.0.1
-  firebase_auth: ^5.1.0
+  # google_sign_in: ^6.2.1
+  # firebase_core: ^3.1.0
+  # cloud_firestore: ^5.0.1
+  # firebase_storage: ^12.0.1
+  # firebase_auth: ^5.1.0
+  # fluttertoast: ^8.2.5
+  # google_fonts: 5.1.0
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: any
+  cloud_firestore: ^5.0.1
+  firebase_auth: ^5.1.0
+  firebase_storage: ^12.0.1
+  fluttertoast: ^8.2.2
+  font_awesome_flutter: ^10.6.0
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
